@@ -6,9 +6,9 @@
 # Required-Start:      $local_fs
 # Should-Start:
 # Required-Stop:
-# Should-Stop:         halt reboot
-# Default-Start:       sysinit 0 6
-# Default-Stop:
+# Should-Stop:
+# Default-Start:       S
+# Default-Stop:        0 6
 # Short-Description:   Starts the local network.
 # Description:         Sets the hostname of the machine and starts the 
 #                      loopback interface.
