@@ -6,7 +6,7 @@
 # Required-Start:      $syslog
 # Should-Start:
 # Required-Stop:       $syslog $local_fs swap localnet 
-# Should-Stop:         halt reboot
+# Should-Stop:
 # Default-Start:       3 4 5
 # Default-Stop:        0 1 2 6
 # Short-Description:   Starts and configures network interfaces.
@@ -31,7 +31,6 @@ case "${1}" in
 			then
 				continue
 			fi
-
 			IN_BOOT=1 ${NETWORK_DEVICES}/ifup ${interface}
 		done
 		;;
