@@ -3,12 +3,12 @@
 
 ### BEGIN INIT INFO
 # Provides:            $time
-# Required-Start:      udev swap
+# Required-Start:      modules
 # Should-Start:
-# Required-Stop:       $network $syslog $local_fs
-# Should-Stop:         halt reboot
-# Default-Start:       sysinit
-# Default-Stop:        
+# Required-Stop:       $syslog
+# Should-Stop:
+# Default-Start:       S
+# Default-Stop: 
 # Short-Description:   Stores and restores time from the hardware clock
 # Description:         On boot, system time is obtained from hwclock.  The
 #                      hardware clock can also be set on shutdown.
